jscomp/syntax/tests/parsing/errors/typexpr/garbage.res
@bs.module("moduleName")
external printName: (~name:?, unit) => unit = "printName"
